test for iamservice